--- a/index.html
+++ b/index.html
@@ -314,8 +314,8 @@
           <div class="first-screen__center">
             <div class="main-slider">
               <div class="main-slider__list-wrap">
-                <div class="main-slider__list js-main-slider loaded" id="heroSliderData">
-                  <div class="main-slider__item js-slide active">
+                <div class="main-slider__list js-main-slider loaded" id="heroSlider">
+                  <!-- <div class="main-slider__item js-slide active">
                     <div class="main-slider__max">
                       <div class="main-slider__row">
                         <div class="main-slider__cell">
@@ -332,43 +332,7 @@
                         </div>
                       </div>
                     </div>
-                  </div>
-                  <div class="main-slider__item js-slide">
-                    <div class="main-slider__max">
-                      <div class="main-slider__row">
-                        <div class="main-slider__cell">
-                          <div class="main-slider__content">
-                            <span class="main-slider__subtitle category-subtitle"><b>new</b> collection</span>
-                            <h2 class="main-slider__title">meet New <br />Fashion week</h2>
-                            <a class="main-slider__button button" href="shop.html">
-                              <span class="button__text">Shop now</span>
-                            </a>
-                          </div>
-                          <div class="main-slider__image-wrap">
-                            <div class="main-slider__image" data-bg="https://via.placeholder.com/1040x800"></div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="main-slider__item js-slide">
-                    <div class="main-slider__max">
-                      <div class="main-slider__row">
-                        <div class="main-slider__cell">
-                          <div class="main-slider__content">
-                            <span class="main-slider__subtitle category-subtitle"><b>new</b> collection</span>
-                            <h2 class="main-slider__title">meet New <br />Fashion week</h2>
-                            <a class="main-slider__button button" href="shop.html">
-                              <span class="button__text">Shop now</span>
-                            </a>
-                          </div>
-                          <div class="main-slider__image-wrap">
-                            <div class="main-slider__image" data-bg="https://via.placeholder.com/1040x800"></div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
+                  </div> -->
                 </div>
               </div>
               <div class="main-slider__bg-wrap">
@@ -752,8 +716,8 @@
           </div>
           <div class="catalog-slider js-catalog loaded">
             <div class="catalog-slider__list-wrap">
-              <div class="catalog-slider__list js-catalog-carousel">
-                <article class="short-item">
+              <div class="catalog-slider__list js-catalog-carousel" id="bestPrdouctSlider">
+                <!-- <article class="short-item">
                   <div class="short-item__all">
                     <a class="short-item__image-bg" href="product_page.html">
                       <img class="short-item__image" src="https://via.placeholder.com/262x360" alt="" />
@@ -775,122 +739,7 @@
                     <span class="short-item__price">$15.99</span>
                     <span class="short-item__old-price">$52.99</span>
                   </div>
-                </article>
-                <article class="short-item">
-                  <div class="short-item__all">
-                    <a class="short-item__image-bg" href="product_page.html">
-                      <img class="short-item__image" src="https://via.placeholder.com/262x360" alt="" />
-                    </a>
-                    <div class="short-item__top">
-                      <div class="short-item__cols">
-                        <div class="short-item__col">
-                          <span class="item-tag item-tag_red">Sale</span>
-                          <span class="item-tag item-tag_green">New</span>
-                        </div>
-                        <div class="short-item__col">
-                          <button class="heart-button js-toggle-active"></button>
-                        </div>
-                      </div>
-                    </div>
-                    <h4 class="short-item__title">
-                      <a class="short-item__link" href="product_page.html">Long oversized T-shirt</a>
-                    </h4>
-                    <span class="short-item__price">$15.99</span>
-                    <span class="short-item__old-price">$52.99</span>
-                  </div>
-                </article>
-                <article class="short-item">
-                  <div class="short-item__all">
-                    <a class="short-item__image-bg" href="product_page.html">
-                      <img class="short-item__image" src="https://via.placeholder.com/262x360" alt="" />
-                    </a>
-                    <div class="short-item__top">
-                      <div class="short-item__cols">
-                        <div class="short-item__col">
-                          <span class="item-tag item-tag_red">Sale</span>
-                          <span class="item-tag item-tag_green">New</span>
-                        </div>
-                        <div class="short-item__col">
-                          <button class="heart-button js-toggle-active"></button>
-                        </div>
-                      </div>
-                    </div>
-                    <h4 class="short-item__title">
-                      <a class="short-item__link" href="product_page.html">Long oversized T-shirt</a>
-                    </h4>
-                    <span class="short-item__price">$15.99</span>
-                    <span class="short-item__old-price">$52.99</span>
-                  </div>
-                </article>
-                <article class="short-item">
-                  <div class="short-item__all">
-                    <a class="short-item__image-bg" href="product_page.html">
-                      <img class="short-item__image" src="https://via.placeholder.com/262x360" alt="" />
-                    </a>
-                    <div class="short-item__top">
-                      <div class="short-item__cols">
-                        <div class="short-item__col">
-                          <span class="item-tag item-tag_red">Sale</span>
-                          <span class="item-tag item-tag_green">New</span>
-                        </div>
-                        <div class="short-item__col">
-                          <button class="heart-button js-toggle-active"></button>
-                        </div>
-                      </div>
-                    </div>
-                    <h4 class="short-item__title">
-                      <a class="short-item__link" href="product_page.html">Long oversized T-shirt</a>
-                    </h4>
-                    <span class="short-item__price">$15.99</span>
-                    <span class="short-item__old-price">$52.99</span>
-                  </div>
-                </article>
-                <article class="short-item">
-                  <div class="short-item__all">
-                    <a class="short-item__image-bg" href="product_page.html">
-                      <img class="short-item__image" src="https://via.placeholder.com/262x360" alt="" />
-                    </a>
-                    <div class="short-item__top">
-                      <div class="short-item__cols">
-                        <div class="short-item__col">
-                          <span class="item-tag item-tag_red">Sale</span>
-                          <span class="item-tag item-tag_green">New</span>
-                        </div>
-                        <div class="short-item__col">
-                          <button class="heart-button js-toggle-active"></button>
-                        </div>
-                      </div>
-                    </div>
-                    <h4 class="short-item__title">
-                      <a class="short-item__link" href="product_page.html">Long oversized T-shirt</a>
-                    </h4>
-                    <span class="short-item__price">$15.99</span>
-                    <span class="short-item__old-price">$52.99</span>
-                  </div>
-                </article>
-                <article class="short-item">
-                  <div class="short-item__all">
-                    <a class="short-item__image-bg" href="product_page.html">
-                      <img class="short-item__image" src="https://via.placeholder.com/262x360" alt="" />
-                    </a>
-                    <div class="short-item__top">
-                      <div class="short-item__cols">
-                        <div class="short-item__col">
-                          <span class="item-tag item-tag_red">Sale</span>
-                          <span class="item-tag item-tag_green">New</span>
-                        </div>
-                        <div class="short-item__col">
-                          <button class="heart-button js-toggle-active"></button>
-                        </div>
-                      </div>
-                    </div>
-                    <h4 class="short-item__title">
-                      <a class="short-item__link" href="product_page.html">Long oversized T-shirt</a>
-                    </h4>
-                    <span class="short-item__price">$15.99</span>
-                    <span class="short-item__old-price">$52.99</span>
-                  </div>
-                </article>
+                </article> -->
               </div>
             </div>
             <div class="catalog-slider__cols">
@@ -1049,6 +898,7 @@
     <script>
       var productList = [];
       var allMyArray = [];
+      var heroSliderList = [];
 
       var request = new XMLHttpRequest();
       request.open("GET", "http://192.168.1.181:3000/go", true);
@@ -1059,7 +909,6 @@
         this.allMyArray.forEach((data1) => {
           if (data1.title === "Product List") {
             this.productList = data1.data;
-            console.log("this.productList", this.productList);
           }
         });
         createData(this.productList, "shortItemAll");
@@ -1072,9 +921,6 @@
 
         const kitchenData = this.productList.filter((element) => element.collections === "Kitchen");
         createData(kitchenData, "kitchenData");
-        // } else {
-        //   console.log("error");
-        // }
 
         function createData(myArray, id) {
           var shortItemAllCreate = "";
@@ -1105,6 +951,166 @@
           }
           shortItemAll.innerHTML = shortItemAllCreate;
         }
+
+        this.allMyArray.forEach((data1) => {
+          if (data1.title === "Hero Slider") {
+            this.heroSliderList = data1.data;
+          }
+        });
+
+        heroSliderData(this.heroSliderList, "heroSlider");
+
+        function heroSliderData(myArray, id) {
+          var heroSliderCreate = "";
+          heroSliderDataList = document.getElementById(id);
+          for (var i in myArray) {
+            heroSliderCreate += "<div class='main-slider__item js-slide active'>";
+            heroSliderCreate += "<div class='main-slider__max'>";
+            heroSliderCreate += "<div class='main-slider__row'>";
+            heroSliderCreate += "<div class='main-slider__cell'>";
+            heroSliderCreate += "<div class='main-slider__content'>";
+            heroSliderCreate += "<span class='main-slider__subtitle category-subtitle'><b>new</b> collection</span>";
+            heroSliderCreate += "<h2 class='main-slider__title'>" + myArray[i].text + " </h2>";
+            heroSliderCreate += "<a class='main-slider__button button' href='shop.html'>";
+            heroSliderCreate += "<span class='button__text'>Shop now</span>";
+            heroSliderCreate += "</a>";
+            heroSliderCreate += "</div>";
+            heroSliderCreate += "<div class='main-slider__image-wrap'>";
+            heroSliderCreate += "<div class='main-slider__image'  data-bg='" + myArray[i]["image-link"] + "'></div>";
+            heroSliderCreate += "</div>";
+            heroSliderCreate += "</div>";
+            heroSliderCreate += "</div>";
+            heroSliderCreate += "</div>";
+            heroSliderCreate += "</div>";
+            heroSliderCreate += "</div>";
+          }
+          heroSliderDataList.innerHTML = heroSliderCreate;
+        }
+        (function () {
+          var srcArr = document.querySelectorAll("[data-bg]");
+          if ($(".mob").length) {
+            setTimeout(function () {
+              for (var i = 0; i < srcArr.length; i++) {
+                var newSrc = srcArr[i].dataset.bg;
+                srcArr[i].style.backgroundImage = "url(" + newSrc + ")";
+              }
+            }, 1500);
+          } else {
+            for (var i = 0; i < srcArr.length; i++) {
+              var newSrc = srcArr[i].dataset.bg;
+              srcArr[i].style.backgroundImage = "url(" + newSrc + ")";
+            }
+          }
+          if ($(".js-main-slider").length) {
+            $(".js-slide").each(function () {
+              $(this).attr("data-item", $(this).index());
+            });
+
+            $(".js-main-slider").on("init", function () {
+              $(".js-main-slider").removeClass("loaded");
+            });
+
+            $(".js-main-slider").slick({
+              dots: true,
+              arrows: true,
+              infinite: true,
+              autoplay: false,
+              autoplaySpeed: 3000,
+              slidesToShow: 1,
+              slidesToScroll: 1,
+              touchThreshold: 200,
+              speed: 1000,
+              waitForAnimate: false,
+              fade: true,
+              appendArrows: $(".js-main-arrows"),
+              appendDots: $(".js-main-dots"),
+            });
+
+            $(".js-main-slider").on("beforeChange", function (event, slick, currentSlide, nextSlide) {
+              var newCount = "<span>" + (nextSlide + 1) + "</span>/" + slick.slideCount;
+              $(".js-main-count").html(newCount);
+              $(this).find(".js-slide").removeClass("active");
+              $(this)
+                .find(".js-slide[data-item=" + nextSlide + "]")
+                .addClass("active");
+            });
+          }
+        })();
+
+        bestPrdouctSliderData(this.productList, "bestPrdouctSlider");
+
+        function bestPrdouctSliderData(myArray, id) {
+          var bestProductSliderCreate = "";
+          bestProductSliderList = document.getElementById(id);
+          for (var i in myArray) {
+            bestProductSliderCreate += "<article class='short-item'>";
+            bestProductSliderCreate += "<div class='short-item__all'>";
+            bestProductSliderCreate += "<a class='short-item__image-bg' href='product_page.html'>";
+            bestProductSliderCreate += "<img class='short-item__image' src='https://via.placeholder.com/262x360' alt='' />";
+            bestProductSliderCreate += "</a>";
+            bestProductSliderCreate += "<div class='short-item__top'>";
+            bestProductSliderCreate += "<div class='short-item__cols'>";
+            bestProductSliderCreate += "<div class='short-item__col'>";
+            bestProductSliderCreate += "<span class='item-tag item-tag_red'>Sale</span>";
+            bestProductSliderCreate += "<span class='item-tag item-tag_green'>New</span>";
+            bestProductSliderCreate += "</div>";
+            bestProductSliderCreate += "<div class='short-item__col'>";
+            bestProductSliderCreate += "<button class='heart-button js-toggle-active'></button>";
+            bestProductSliderCreate += "</div>";
+            bestProductSliderCreate += "</div>";
+            bestProductSliderCreate += "</div>";
+            bestProductSliderCreate += "<h4 class='short-item__title'>";
+            bestProductSliderCreate += "<a class='short-item__link' href='product_page.html'>" + myArray[i]["product-name"] + "</a>";
+            bestProductSliderCreate += "</h4>";
+            bestProductSliderCreate += "<span class='short-item__price'>" + myArray[i].price + "</span>";
+            bestProductSliderCreate += "<span class='short-item__old-price'>" + myArray[i]["strikethrough-price"] + "</span>";
+            bestProductSliderCreate += "</div>";
+            bestProductSliderCreate += "</article>";
+          }
+          bestProductSliderList.innerHTML = bestProductSliderCreate;
+        }
+        (function () {
+          if ($(".js-catalog-carousel").length) {
+            $(function () {
+              $(".js-catalog-carousel").on("init", function () {
+                $(".js-catalog").removeClass("loaded");
+              });
+
+              function catalogInit(slider, dots, arrowPrev, arrowNext) {
+                slider.slick({
+                  dots: true,
+                  appendDots: dots,
+                  arrows: true,
+                  prevArrow: arrowPrev,
+                  nextArrow: arrowNext,
+                  infinite: true,
+                  autoplay: false,
+                  slidesToShow: 4,
+                  slidesToScroll: 4,
+                  touchThreshold: 200,
+                  speed: 500,
+                  waitForAnimate: false,
+                  adaptiveHeight: true,
+                  responsive: [
+                    { breakpoint: 992, settings: { slidesToShow: 3, slidesToScroll: 3 } },
+                    { breakpoint: 701, settings: { slidesToShow: 2, slidesToScroll: 2 } },
+                    { breakpoint: 480, settings: { slidesToShow: 1, slidesToScroll: 1 } },
+                  ],
+                });
+              }
+
+              $(".js-catalog-carousel").each(function () {
+                var $this = $(this),
+                  $dots = $this.closest(".js-catalog").find(".js-catalog-dots"),
+                  $arrowPrev = $this.closest(".js-catalog").find(".js-catalog-prev"),
+                  $arrowNext = $this.closest(".js-catalog").find(".js-catalog-next");
+                setTimeout(function () {
+                  catalogInit($this, $dots, $arrowPrev, $arrowNext);
+                }, 3000);
+              });
+            });
+          }
+        })();
       };
       request.send();
     </script>
