--- a/shop.html
+++ b/shop.html
@@ -328,8 +328,8 @@
                   <h2 class="widget__title widget__title_hide-mob">Categories</h2>
                   <a class="widget__button js-slidedown-button" href="javascript:void(0);">Categories</a>
                   <div class="widget__hide js-slidedown-hide">
-                    <ul class="side-nav">
-                      <li class="side-nav__item">
+                    <ul class="side-nav" id="sideNavForCategories">
+                      <!-- <li class="side-nav__item">
                         <a class="side-nav__link" href="javascript:void(0)">All</a>
                       </li>
                       <li class="side-nav__item active">
@@ -343,7 +343,7 @@
                       </li>
                       <li class="side-nav__item">
                         <a class="side-nav__link" href="javascript:void(0)">New Arrivals</a>
-                      </li>
+                      </li> -->
                     </ul>
                   </div>
                 </section>
@@ -761,6 +761,7 @@
     <script>
       var myArray = [];
       var productList = [];
+      var collectionsList = [];
       var allMyArray = [];
 
       var request = new XMLHttpRequest();
@@ -769,73 +770,94 @@
         var data = JSON.parse(this.response);
 
         this.allMyArray = data.data;
+        this.allMyArray.forEach((data1) => {
+          if (data1.title === "Collections List") {
+            data1.data.forEach((ele, index) => {
+              collectionsList.push({ ...ele, id: index + 1 });
+            });
+          }
+        });
+
+        displaySideNavForCategories(collectionsList, "sideNavForCategories");
 
         this.allMyArray.forEach((data1) => {
           if (data1.title === "Product List") {
-            this.productList = data1.data;
-            console.log("this.productList", this.productList);
+            productList = data1.data;
           }
         });
-        createData(this.productList, "shortItemAll");
+        createData(productList);
 
-        // if (request.status === 200) {
-        //    this.myArray = data;
-        //   createData(data, "shortItemAll");
-        // } else {
-        //   console.log("error");
-        // }
-        function createData(myArray, id) {
+        function displaySideNavForCategories(myArray, id) {
           var shortItemAllCreate = "";
           shortItemAll = document.getElementById(id);
-          console.log("shortItemAll", shortItemAll);
+          shortItemAllCreate += "<li class='side-nav__item active'>";
+          shortItemAllCreate += "<a class='side-nav__link' href='javascript:void(0)' onClick='selectCollectionsList(0)'>All</a>";
+          shortItemAllCreate += "</li>";
+
           for (var i in myArray) {
-            shortItemAllCreate += "<article class='short-item'>";
-            shortItemAllCreate += "<div class='short-item__all'>";
-            shortItemAllCreate += "<a class='short-item__image-bg' href='product_page.html'>";
+            shortItemAllCreate += "<li class='side-nav__item'>";
             shortItemAllCreate +=
-              "<img class='short-item__image' src='data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=' data-lazy='https://via.placeholder.com/262x360' alt='' />";
-            shortItemAllCreate += "</a>";
-            shortItemAllCreate += "<div class='short-item__top'>";
-            shortItemAllCreate += "<div class='short-item__cols'>";
-            shortItemAllCreate += "<div class='short-item__col'>";
-            shortItemAllCreate += "<span class='item-tag item-tag_green'>New</span>";
-            shortItemAllCreate += "</div>";
-            shortItemAllCreate += "<div class='short-item__col'>";
-            shortItemAllCreate += "<button class='heart-button js-toggle-active'></button>";
-            shortItemAllCreate += "</div>";
-            shortItemAllCreate += "</div>";
-            shortItemAllCreate += "</div>";
-            shortItemAllCreate += "<h4 class='short-item__title'>";
-            shortItemAllCreate += "<a class='short-item__link' href='product_page.html'>Cotton T-shirt</a>";
-            shortItemAllCreate += "</h4>";
-            shortItemAllCreate += "<span class='short-item__price'>$35.99</span>";
-            shortItemAllCreate += "</div>";
-            shortItemAllCreate += "</article>";
+              "<a class='side-nav__link' href='javascript:void(0)' onClick='selectCollectionsList(" +
+              myArray[i].id +
+              ")'>" +
+              myArray[i]["collections-list"] +
+              "</a>";
+            shortItemAllCreate += "</li>";
           }
+          shortItemAllCreate += "<li class='side-nav__item'>";
+          shortItemAllCreate += "<a class='side-nav__link' href='javascript:void(0)'>New Arrivals</a>";
+          shortItemAllCreate += "</li>";
           shortItemAll.innerHTML = shortItemAllCreate;
         }
       };
 
-      request.send();
-
       function selectCollectionsList(type) {
-        console.log("Carpet", type);
-        console.log("productList", productList);
-        console.log("this.productList", this.productList);
-        console.log("this.allMyArray", this.allMyArray);
-
-        console.log("allMyArray", allMyArray);
-        if (type === "Carpet") {
-          const carpetData = this.productList.filter((element) => element.collections === "Carpet");
-          this.createData(carpetData, "shortItemAll");
-        } else if (type === "Carpet") {
-          const homeDecoreData = this.productList.filter((element) => element.collections === "Home Decor");
-          this.createData(homeDecoreData, "shortItemAll");
-        } else if (type === "Carpet") {
-          const kitchenData = this.productList.filter((element) => element.collections === "Kitchen");
-          this.createData(kitchenData, "shortItemAll");
+        if (type === 0) {
+          const data = productList;
+          createData(data);
+        } else {
+          const selectedCollectionsList = collectionsList.find((ele) => ele.id === type);
+          if (selectedCollectionsList["collections-list"]) {
+            const data = productList.filter((element) => {
+              return element.collections === selectedCollectionsList["collections-list"];
+            });
+            createData(data);
+          }
         }
       }
+
+      function createData(myArray) {
+        var id = "shortItemAll";
+        var shortItemAllCreate = "";
+        shortItemAll = document.getElementById(id);
+        for (var i in myArray) {
+          shortItemAllCreate += "<article class='short-item'>";
+          shortItemAllCreate += "<div class='short-item__all'>";
+          shortItemAllCreate += "<a class='short-item__image-bg' href='product_page.html'>";
+          shortItemAllCreate +=
+            "<img class='short-item__image' src='data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=' data-lazy='https://via.placeholder.com/262x360' alt='' />";
+          shortItemAllCreate += "</a>";
+          shortItemAllCreate += "<div class='short-item__top'>";
+          shortItemAllCreate += "<div class='short-item__cols'>";
+          shortItemAllCreate += "<div class='short-item__col'>";
+          shortItemAllCreate += "<span class='item-tag item-tag_green'>New</span>";
+          shortItemAllCreate += "</div>";
+          shortItemAllCreate += "<div class='short-item__col'>";
+          shortItemAllCreate += "<button class='heart-button js-toggle-active'></button>";
+          shortItemAllCreate += "</div>";
+          shortItemAllCreate += "</div>";
+          shortItemAllCreate += "</div>";
+          shortItemAllCreate += "<h4 class='short-item__title'>";
+          shortItemAllCreate += "<a class='short-item__link' href='product_page.html'>Cotton T-shirt</a>";
+          shortItemAllCreate += "</h4>";
+          shortItemAllCreate += "<span class='short-item__price'>$35.99</span>";
+          shortItemAllCreate += "</div>";
+          shortItemAllCreate += "</article>";
+        }
+        shortItemAll.innerHTML = shortItemAllCreate;
+      }
+
+      request.send();
     </script>
   </body>
 </html>
