--- a/faq.html
+++ b/faq.html
@@ -565,7 +565,7 @@
       var myArray = [];
 
       var request = new XMLHttpRequest();
-      request.open("GET", "http://192.168.1.181:3000/go", true);
+      request.open("GET", "https://theme-app-thomas.herokuapp.com/go", true);
       request.onload = function () {
         var data = JSON.parse(this.response);
 
