Replace local image width api url image path

--- a/index.html
+++ b/index.html
@@ -1046,7 +1046,7 @@
             bestProductSliderCreate += "<article class='short-item'>";
             bestProductSliderCreate += "<div class='short-item__all'>";
             bestProductSliderCreate += "<a class='short-item__image-bg' href='product_page.html'>";
-            bestProductSliderCreate += "<img class='short-item__image' src='https://via.placeholder.com/262x360' alt='' />";
+            bestProductSliderCreate += "<img class='short-item__image' src='" + myArray[i]["image-1"] + "' alt='' />";
             bestProductSliderCreate += "</a>";
             bestProductSliderCreate += "<div class='short-item__top'>";
             bestProductSliderCreate += "<div class='short-item__cols'>";
