change header according to Zoa file

--- a/my_profile.html
+++ b/my_profile.html
@@ -56,17 +56,18 @@
         <div class="header__main">
           <div class="header__cols">
             <div class="header__left">
-              <div class="header__cols">
-                <div class="header__col">
-                  <button class="mob-button js-mob-open">
-                    <span class="mob-button__icon"></span>
-                  </button>
-                </div>
-                <div class="header__col">
-                  <a class="mob__logo logo" href="#">
-                    <img class="logo__image" src="https://via.placeholder.com/82x17" alt="" />
-                  </a>
-                </div>
+              <div class="header__col">
+                <button class="mob-button js-mob-open">
+                  <span class="mob-button__icon"></span>
+                </button>
+              </div>
+              <div class="header__col">
+                <a class="mob__logo logo" href="#">
+                  <img class="logo__image" src="https://via.placeholder.com/82x17" alt="" />
+                </a>
+              </div>
+            </div>
+            <div class="header__center">
                 <div class="header__col header__col_hide-mob">
                   <nav class="header-nav">
                     <ul class="header-nav__list">
