--- a/index.html
+++ b/index.html
@@ -116,31 +116,31 @@
                             </ul>
                             <div class="hide-nav__list hide-nav__image__wrap text-right">
                               <a href="" class="hide-nav-collecton__image">
-                                <img src="file:///Users/mac/Downloads/Zoa/img/collection_4.jpg" alt="" />
+                                <img src="assets/img/collection/collection.jpeg" alt="" />
                               </a>
                             </div>
                           </div>
                         </div>
                       </li>
                       <li class="header-nav__item js-nav-item">
-                        <a class="header-nav__link header-nav__link_arrow js-nav-button" href="index.html">Collection</a>
+                        <a class="header-nav__link header-nav__link_arrow js-nav-button" href="collections.html">Collection</a>
                         <div class="hide-nav js-nav-hide">
                           <div class="clearfix">
                             <div class="hide-nav__list hide-nav__image__wrap text-center">
                               <a href="" class="hide-nav-collecton__image">
-                                <img src="file:///Users/mac/Downloads/Zoa/img/collection_4.jpg" alt="" />
+                                <img src="assets/img/collection/collection.jpeg" alt="" />
                               </a>
                               <label for="">New Trending '18</label>
                             </div>
                             <div class="hide-nav__list hide-nav__image__wrap text-center">
                               <a href="" class="hide-nav-collecton__image">
-                                <img src="file:///Users/mac/Downloads/Zoa/img/collection_4.jpg" alt="" />
+                                <img src="assets/img/collection/collection.jpeg" alt="" />
                               </a>
                               <label for="">New Lookbooks</label>
                             </div>
                             <div class="hide-nav__list hide-nav__image__wrap text-center">
                               <a href="" class="hide-nav-collecton__image">
-                                <img src="file:///Users/mac/Downloads/Zoa/img/collection_4.jpg" alt="" />
+                                <img src="assets/img/collection/collection.jpeg" alt="" />
                               </a>
                               <label for="">Onsale</label>
                             </div>
@@ -160,7 +160,7 @@
                           <div class="clearfix">
                             <ul class="hide-nav__list hide-nav__list_wrap">
                               <li class="hide-nav__item">
-                                <label>Common Page</label>
+                                <label>Page Set 1</label>
                               </li>
                               <li class="hide-nav__item">
                                 <a class="hide-nav__link" href="about.html">About us</a>
@@ -174,10 +174,31 @@
                               <li class="hide-nav__item">
                                 <a class="hide-nav__link" href="wishlist.html">Wishlist</a>
                               </li>
+                              <li class="hide-nav__item">
+                                <a class="hide-nav__link" href="my_profile.html">My Profile</a>
+                              </li>
+                              <li class="hide-nav__item">
+                                <a class="hide-nav__link" href="404.html">404</a>
+                              </li>
+                              <li class="hide-nav__item">
+                                <a class="hide-nav__link" href="privacy_policy.html">Privacy Policy</a>
+                              </li>
+                              <li class="hide-nav__item">
+                                <a class="hide-nav__link" href="terms_of_use.html">Terms of Use</a>
+                              </li>
                             </ul>
                             <ul class="hide-nav__list hide-nav__list_wrap">
                               <li class="hide-nav__item">
-                                <label>Cart Page</label>
+                                <label>Page Set 2</label>
+                              </li>
+                              <li class="hide-nav__item">
+                                <a class="hide-nav__link" href="login.html">Login</a>
+                              </li>
+                              <li class="hide-nav__item">
+                                <a class="hide-nav__link" href="registration.html">Registration</a>
+                              </li>
+                              <li class="hide-nav__item">
+                                <a class="hide-nav__link" href="faq.html">FAQ's</a>
                               </li>
                               <li class="hide-nav__item">
                                 <a class="hide-nav__link" href="cart.html">Cart</a>
@@ -195,8 +216,20 @@
                           </div>
                         </div>
                       </li>
-                      <li class="header-nav__item">
-                        <a class="header-nav__link" href="blog.html">Blog</a>
+                      <li class="header-nav__item header-nav_dropdown__item js-nav-item">
+                        <a class="header-nav__link header-nav__link_arrow js-nav-button" href="blog.html">Blog</a>
+                        <div class="hide-nav dropdown-hide__nav js-nav-hide">
+                          <div class="clearfix">
+                            <ul class="hide-nav__list hide-nav__list_wrap">
+                              <li class="hide-nav__item">
+                                <a class="hide-nav__link" href="blog.html">Blog</a>
+                              </li>
+                              <li class="hide-nav__item">
+                                <a class="hide-nav__link" href="post.html">Blog Post</a>
+                              </li>
+                            </ul>
+                          </div>
+                        </div>
                       </li>
                       <li class="header-nav__item">
                         <a class="header-nav__link" href="contacts.html">Contact</a>
@@ -243,8 +276,52 @@
           <button class="hide-mob__close close-button js-mob-close"></button>
           <div class="hide-mob__mask js-mob-close"></div>
           <ul class="mob-nav">
-            <li class="mob-nav__item">
+            <li class="mob-nav__item active">
               <a class="mob-nav__link" href="index.html">Home</a>
+            </li>
+            <li class="mob-nav__item js-slidedown">
+              <a class="mob-nav__link js-slidedown-button" href="shop.html">
+                <span class="mob-nav__arrow">Shop</span>
+              </a>
+              <div class="slide-nav js-slidedown-hide">
+                <ul class="slide-nav__list">
+                  <li class="slide-nav__item">
+                    <label class="slide-nav__title_label">Shop Pages</label>
+                  </li>
+                  <li class="slide-nav__item">
+                    <a class="slide-nav__link" href="#">Shop Page V1</a>
+                  </li>
+                  <li class="slide-nav__item">
+                    <a class="slide-nav__link" href="#">Shop Page V2</a>
+                  </li>
+                  <li class="slide-nav__item">
+                    <a class="slide-nav__link" href="#">Shop Page V3</a>
+                  </li>
+                  <li class="slide-nav__item">
+                    <a class="slide-nav__link" href="#">Shop Page V4</a>
+                  </li>
+                </ul>
+                <ul class="slide-nav__list">
+                  <li class="slide-nav__item">
+                    <label class="slide-nav__title_label">Prodcut Pages</label>
+                  </li>
+                  <li class="slide-nav__item">
+                    <a class="slide-nav__link" href="#">Prodcut Page V1</a>
+                  </li>
+                  <li class="slide-nav__item">
+                    <a class="slide-nav__link" href="#">Prodcut Page V2</a>
+                  </li>
+                  <li class="slide-nav__item">
+                    <a class="slide-nav__link" href="#">Prodcut Page V3</a>
+                  </li>
+                  <li class="slide-nav__item">
+                    <a class="slide-nav__link" href="#">Prodcut Page V4</a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li class="mob-nav__item">
+              <a class="mob-nav__link" href="shop.html">Collection</a>
             </li>
             <li class="mob-nav__item js-slidedown">
               <a class="mob-nav__link js-slidedown-button" href="about.html">
@@ -253,43 +330,45 @@
               <div class="slide-nav js-slidedown-hide">
                 <ul class="slide-nav__list">
                   <li class="slide-nav__item">
-                    <a class="slide-nav__link" href="login.html">Login</a>
-                  </li>
-                  <li class="slide-nav__item">
-                    <a class="slide-nav__link" href="registration.html">Registration</a>
+                    <label class="slide-nav__title_label">Page Set 1</label>
                   </li>
                   <li class="slide-nav__item">
                     <a class="slide-nav__link" href="about.html">About us</a>
                   </li>
                   <li class="slide-nav__item">
-                    <a class="slide-nav__link" href="collections.html">Collections</a>
+                    <a class="slide-nav__link" href="shop.html">Catalog</a>
                   </li>
                   <li class="slide-nav__item">
-                    <a class="slide-nav__link" href="faq.html">FAQ</a>
+                    <a class="slide-nav__link" href="product_page.html">Product Page</a>
                   </li>
                   <li class="slide-nav__item">
-                    <a class="slide-nav__link" href="post.html">Post</a>
+                    <a class="slide-nav__link" href="wishlist.html">Wishlist</a>
+                  </li>
+                  <li class="slide-nav__item">
+                    <a class="slide-nav__link" href="my_profile.html">My Profile</a>
                   </li>
                   <li class="slide-nav__item">
                     <a class="slide-nav__link" href="404.html">404</a>
                   </li>
+                  <li class="slide-nav__item">
+                    <a class="slide-nav__link" href="privacy_policy.html">Privacy Policy</a>
+                  </li>
+                  <li class="slide-nav__item">
+                    <a class="slide-nav__link" href="terms_of_use.html">Terms of Use</a>
+                  </li>
                 </ul>
-              </div>
-            </li>
-            <li class="mob-nav__item js-slidedown">
-              <a class="mob-nav__link js-slidedown-button" href="#">
-                <span class="mob-nav__arrow">Shop</span>
-              </a>
-              <div class="slide-nav js-slidedown-hide">
                 <ul class="slide-nav__list">
                   <li class="slide-nav__item">
-                    <a class="slide-nav__link" href="my_profile.html">Profile</a>
+                    <label class="slide-nav__title_label">Page Set 2</label>
                   </li>
                   <li class="slide-nav__item">
-                    <a class="slide-nav__link" href="shop.html">Catalog</a>
+                    <a class="slide-nav__link" href="Login.html">Login</a>
                   </li>
                   <li class="slide-nav__item">
-                    <a class="slide-nav__link" href="product_page.html">Product page</a>
+                    <a class="slide-nav__link" href="registration.html">Registration</a>
+                  </li>
+                  <li class="slide-nav__item">
+                    <a class="slide-nav__link" href="faq.html">FAQ's</a>
                   </li>
                   <li class="slide-nav__item">
                     <a class="slide-nav__link" href="cart.html">Cart</a>
@@ -303,14 +382,23 @@
                   <li class="slide-nav__item">
                     <a class="slide-nav__link" href="checkout-3.html">Checkout 3</a>
                   </li>
-                  <li class="slide-nav__item">
-                    <a class="slide-nav__link" href="wishlist.html">Wishlist</a>
-                  </li>
                 </ul>
               </div>
             </li>
-            <li class="mob-nav__item">
-              <a class="mob-nav__link" href="blog.html">Blog</a>
+            <li class="mob-nav__item js-slidedown">
+              <a class="mob-nav__link js-slidedown-button" href="blog.html">
+                <span class="mob-nav__arrow">Blog</span>
+              </a>
+              <div class="slide-nav js-slidedown-hide">
+                <ul class="slide-nav__list">
+                  <li class="slide-nav__item">
+                    <a class="slide-nav__link" href="blog.html">Blog</a>
+                  </li>
+                  <li class="slide-nav__item">
+                    <a class="slide-nav__link" href="post.html">Blog Post</a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="mob-nav__item">
               <a class="mob-nav__link" href="contacts.html">Contact</a>
@@ -344,7 +432,7 @@
             <div class="first-screen__mob-cols">
               <div class="first-screen__mob-col">
                 <div class="slider-count">
-                  <span class="slider-count__text js-main-count"><span>1</span>/3</span>
+                  <span class="slider-count__text js-main-count"></span>
                 </div>
               </div>
               <div class="first-screen__mob-col">
@@ -795,13 +883,24 @@
     <script src="assets/js/libs/jquery-migrate-1.4.1.min.js"></script>
     <script src="assets/js/components/slick.js"></script>
     <script src="assets/js/components/syotimer.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="assets/js/main.js" data-track="reload"></script>
+    <main_js></main_js>
     <script>
       var productList = [];
       var allMyArray = [];
       var heroSliderList = [];
 
       var request = new XMLHttpRequest();
+
+      function include(file) {
+        var script = document.createElement("script");
+        script.src = file;
+        script.type = "text/javascript";
+        script.defer = true;
+
+        document.getElementsByTagName("main_js").item(0).appendChild(script);
+      }
+
       request.open("GET", "https://theme-app-thomas.herokuapp.com/go", true);
       request.onload = function () {
         var data = JSON.parse(this.response);
@@ -887,56 +986,6 @@
           }
           heroSliderDataList.innerHTML = heroSliderCreate;
         }
-        (function () {
-          var srcArr = document.querySelectorAll("[data-bg]");
-          if ($(".mob").length) {
-            setTimeout(function () {
-              for (var i = 0; i < srcArr.length; i++) {
-                var newSrc = srcArr[i].dataset.bg;
-                srcArr[i].style.backgroundImage = "url(" + newSrc + ")";
-              }
-            }, 1500);
-          } else {
-            for (var i = 0; i < srcArr.length; i++) {
-              var newSrc = srcArr[i].dataset.bg;
-              srcArr[i].style.backgroundImage = "url(" + newSrc + ")";
-            }
-          }
-          if ($(".js-main-slider").length) {
-            $(".js-slide").each(function () {
-              $(this).attr("data-item", $(this).index());
-            });
-
-            $(".js-main-slider").on("init", function () {
-              $(".js-main-slider").removeClass("loaded");
-            });
-
-            $(".js-main-slider").slick({
-              dots: true,
-              arrows: true,
-              infinite: true,
-              autoplay: false,
-              autoplaySpeed: 3000,
-              slidesToShow: 1,
-              slidesToScroll: 1,
-              touchThreshold: 200,
-              speed: 1000,
-              waitForAnimate: false,
-              fade: true,
-              appendArrows: $(".js-main-arrows"),
-              appendDots: $(".js-main-dots"),
-            });
-
-            $(".js-main-slider").on("beforeChange", function (event, slick, currentSlide, nextSlide) {
-              var newCount = "<span>" + (nextSlide + 1) + "</span>/" + slick.slideCount;
-              $(".js-main-count").html(newCount);
-              $(this).find(".js-slide").removeClass("active");
-              $(this)
-                .find(".js-slide[data-item=" + nextSlide + "]")
-                .addClass("active");
-            });
-          }
-        })();
 
         bestPrdouctSliderData(this.productList, "bestPrdouctSlider");
 
@@ -970,48 +1019,8 @@
           }
           bestProductSliderList.innerHTML = bestProductSliderCreate;
         }
-        (function () {
-          if ($(".js-catalog-carousel").length) {
-            $(function () {
-              $(".js-catalog-carousel").on("init", function () {
-                $(".js-catalog").removeClass("loaded");
-              });
 
-              function catalogInit(slider, dots, arrowPrev, arrowNext) {
-                slider.slick({
-                  dots: true,
-                  appendDots: dots,
-                  arrows: true,
-                  prevArrow: arrowPrev,
-                  nextArrow: arrowNext,
-                  infinite: true,
-                  autoplay: false,
-                  slidesToShow: 4,
-                  slidesToScroll: 4,
-                  touchThreshold: 200,
-                  speed: 500,
-                  waitForAnimate: false,
-                  adaptiveHeight: true,
-                  responsive: [
-                    { breakpoint: 992, settings: { slidesToShow: 3, slidesToScroll: 3 } },
-                    { breakpoint: 701, settings: { slidesToShow: 2, slidesToScroll: 2 } },
-                    { breakpoint: 480, settings: { slidesToShow: 1, slidesToScroll: 1 } },
-                  ],
-                });
-              }
-
-              $(".js-catalog-carousel").each(function () {
-                var $this = $(this),
-                  $dots = $this.closest(".js-catalog").find(".js-catalog-dots"),
-                  $arrowPrev = $this.closest(".js-catalog").find(".js-catalog-prev"),
-                  $arrowNext = $this.closest(".js-catalog").find(".js-catalog-next");
-                setTimeout(function () {
-                  catalogInit($this, $dots, $arrowPrev, $arrowNext);
-                }, 3000);
-              });
-            });
-          }
-        })();
+        include("assets/js/slider_script.js");
       };
       request.send();
     </script>
